# ids-manager

./: Anchor.toml  README.md  package.json
programs/humanship/: Cargo.toml
programs/humanship/src/: base.rs  cnft.rs  lib.rs  membership.rs  utils.rs
tests/: humanship.ts
