[package]
name = "humanship"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "humanship"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
#default = ["idl-build"]
default = []
test-sbf = []
bench-sbf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
brine-ed25519 = {version = "0.1.1"}
solana-curve25519 = "=2.0.13"
sha2 = "0.10.9"
proc-macro2 = "=1.0.94"
anchor-lang = {version="0.30.0", features = ["init-if-needed"]}
solana-program = "=1.18.23"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
mpl-token-metadata = { version = "5.1.0" }
anchor-spl = "0.30.0"
mpl-bubblegum = {version = "1.4.0"}
thiserror = "1.0"
spl-account-compression = { version="0.4.2", features = ["no-entrypoint"] }